Bug 403408 - Window size is not enough to show header text entirely
Summary: Window size is not enough to show header text entirely
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.16.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-19 18:42 UTC by Patrick Silva
Modified: 2019-06-27 11:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.3
Sentry Crash Report:


Attachments
demonstration (2.78 MB, video/webm)
2019-01-19 18:42 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-01-19 18:42:57 UTC
Created attachment 117560 [details]
demonstration

Header text is not entirely readable in the crash wizard,
"... falha)" is cut off. Please watch the screencast recorded on Arch linux
running plasma 5.15 beta.

EXPECTED RESULT
Header text is entirely readable without manual window resizing.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.14.90
KDE Frameworks Version: 5.54.0
Qt Version: 5.12.0

ADDITIONAL INFORMATION
The language of my system is pt-br.
Comment 1 Harald Sitter 2019-06-27 11:43:25 UTC
Git commit fdff5bd4bc20a2381b548dd8b3e448308b51ebbc by Harald Sitter.
Committed on 27/06/2019 at 11:41.
Pushed by sitter into branch 'Plasma/5.16'.

do not set a hardcoded minimum size

Summary:
setting the minimum size manually like this is overriding the actual
calculated minimum size (as per child widgets) which ultimately means that
when a child's effective minimum is larger than the manually set one you
can resize the widget such that the child no longer fits in.
this is most notably observed with the page title widget. it doesn't word
wrap, so it has a specific minimum size: the amount of space it requires to
render the text in one line if its minimum width then exceeds the
600 pixels we had manually set, the widget would get cut off.

setting the minimum size should be entirely unnecessary. if all widgets
have a suitable sizing policy and sizehint the dialog will calculate a
suitable overall sizehint and minimum. getting rid of the manually set
minimum means the dialog can be shrunk exactly as far as the page content
allows it to shrink and no further.

I chased the the minimum size back to kde-runtime in git but it even seems
to predate that, so I have no clue what it was meant to achieve, but I am
almost certain that it was a hacky attempt at hiding bad size policies
or lack of size adjustments elsewhere in the dialog stack.

CHANGELOG: The bug report dialog can no longer be resized to cut off text
FIXED-IN: 5.16.3

Test Plan:
- set general font size to 16pt
- start drkonqi with LANGUAGE=pt_BR
- report bug
- observe all pages suffering from being cut off, up until the backtrace page which has manual adjustment logic as of a couple of commits ago (due to its actual sizing changing)

Reviewers: #plasma, apol

Reviewed By: apol

Subscribers: apol, cfeck, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D21797

M  +0    -23   src/backtracewidget.cpp
M  +4    -2    src/bugzillaintegration/reportassistantdialog.cpp
M  +5    -4    src/drkonqidialog.cpp
M  +32   -2    src/ui/backtracewidget.ui
M  +24   -0    src/ui/maindialog.ui

https://commits.kde.org/drkonqi/fdff5bd4bc20a2381b548dd8b3e448308b51ebbc